Lower phi inputs at their appropriate edges (bug 677066, r=adrake).