js/src/ion/x86/Lowering-x86.h
@@ -68,7 +68,8 @@ class LIRGeneratorX86 : public LIRGeneratorShared
     bool fillBoxUses(LInstruction *lir, size_t n, MDefinition *mir);
 
     bool assignSnapshot(LInstruction *ins);
-    bool preparePhi(MPhi *phi);
+    void lowerUntypedPhiInput(MPhi *phi, uint32 inputPosition, LBlock *block, size_t lirIndex);
+    bool defineUntypedPhi(MPhi *phi, size_t lirIndex);
 
     bool lowerForALU(LInstructionHelper<1, 2, 0> *ins, MDefinition *mir, MDefinition *lhs,
                      MDefinition *rhs);
